# spectrum_analyzer

./: .gitignore  Cargo.toml  README.md  bundler.toml
.cargo/: config.toml
gui/: next.config.ts  package.json  tsconfig.json  webview.d.ts
gui/app/: layout.tsx  page.tsx
gui/bindings/: DrawData.ts  DrawRequest.ts  Message.ts  MonitorMode.ts  SpectrumAnalyzerConfigUpdate.ts
gui/components/: Canvas.tsx  Spectrum.tsx
gui/hooks/: usePluginListener.ts
src/: dsp.rs  lib.rs  params.rs
src/editor/: embedded.rs  ipc.rs  mod.rs  monitor.rs  spectrum_analyzer.rs
src/editor/spectrum_analyzer/: config.rs  ipc.rs  mod.rs  monitor.rs  processing.rs  utils.rs
